--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.11.3",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.1.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
